fixed cart page horizontal scroll on mobile devices

--- a/src/pages/CartPage/Cart.css
+++ b/src/pages/CartPage/Cart.css
@@ -130,6 +130,15 @@
   margin-bottom: 10px;
 }
 
+@media (max-width: 412px) {
+  .cart-item td:first-of-type {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-right: 5px;
+  }
+}
+
 @media (max-width: 767px) {
   .cart th:last-of-type,
   .cart-item td:last-of-type,
